# neurocombat_sklearn

./: pyproject.toml
neurocombat_sklearn/: neurocombat_sklearn.py
src/neurocombat_sklearn/: __init__.py  neurocombat_sklearn.py
tests/: performance_test_cache.py  test_common.py
