[project]
name = "neurocombat-sklearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhishek Roy", email = "royabhishek77@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
