[project]
name = "neurocombat-sklearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhishek Roy", email = "royabhishek77@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.13.0",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
]
classifiers= ["Private :: Do Not Upload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
